--- a/aplikacija/templates/registration/password_reset_complete.html
+++ b/aplikacija/templates/registration/password_reset_complete.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% extends "reset-password.html" %}
-    {% block title %}Lozinka promenjena{% endblock %}
+{% extends "reset-password.html" %}
 
-    {% block content %}
-      <h1>Lozinka uspešno promenjena</h1>
-      <p>Uspešno ste promenili lozinku. Možete se sada prijaviti koristeći novu lozinku.</p>
-      <p><a href="{% url 'login' %}">Prijavi se</a></p>
-    {% endblock %}
-</body>
-</html>
+{% block title %}Lozinka promenjena{% endblock %}
+
+{% block header %}
+Lozinka uspešno promenjena ✅
+{% endblock %}
+
+{% block content %}
+<p class="text-center">
+    Uspešno ste promenili lozinku.<br>
+    Sada se možete prijaviti koristeći novu lozinku.
+</p>
+
+<div class="text-center mt-4">
+    <a href="{% url 'login' %}" class="btn btn-primary w-100">
+        Prijavi se
+    </a>
+</div>
+{% endblock %}
