--- a/aplikacija/templates/registration/password_reset_done.html
+++ b/aplikacija/templates/registration/password_reset_done.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% extends "reset-password.html" %}
-    {% block title %}Poslato - reset lozinke{% endblock %}
+{% extends "reset-password.html" %}
 
-    {% block content %}
-      <h1>Proverite svoj mejl</h1>
-      <p>Ako je nalog sa tim mejlom registrovan, poslaćemo Vam poruku sa linkom za reset lozinke.</p>
-      <p>Proverite i spam folder ako ne vidite mejl odmah.</p>
-    {% endblock %}
-</body>
-</html>
+{% block title %}Poslato - reset lozinke{% endblock %}
+
+{% block header %}
+📩 Proverite svoj email
+{% endblock %}
+
+{% block content %}
+<div class="text-center">
+    <p class="mb-2">
+        Ako je nalog sa tom email adresom registrovan, poslali smo Vam instrukcije za reset lozinke.
+    </p>
+    <p class="text-muted small">
+        📌 Proverite i <strong>spam</strong> folder ukoliko poruka ne stigne ubrzo.
+    </p>
+
+</div>
+{% endblock %}
