Konacna verzija implementacije
Change-Id: I1ab9d88bb7cab904268f896519651b7664416361

--- a/aplikacija/static/style.css
+++ b/aplikacija/static/style.css
@@ -1,4 +1,4 @@
-/* Luka Zdravic */
+/* Luka Zdravic Veljko Matic Andjela Dimitrijevic Filip Pantic*/
 /*body {*/
 /*    font-family: Arial, sans-serif;*/
 /*    background-color: #f0f0f0;*/
