--- a/aplikacija/templates/registration/password_reset_confirm.html
+++ b/aplikacija/templates/registration/password_reset_confirm.html
@@ -1,3 +1,4 @@
+<!-- Filip Pantic -->
 {% extends "reset-password.html" %}
 {% block title %}Postavite novu lozinku{% endblock %}
 
@@ -9,7 +10,6 @@
     {% csrf_token %}
     {{ form.non_field_errors }}
 
-    <!-- Nova lozinka -->
     <div>
         <label class="fw-semibold">{{ form.new_password1.label }}</label><br>
         {{ form.new_password1 }}
