--- a/aplikacija/templates/create-ad.html
+++ b/aplikacija/templates/create-ad.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -6,16 +7,14 @@
     <meta charset="UTF-8">
     <title>Kreiraj Oglas</title>
 
-    <!-- ✅ Bootstrap -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- ✅ Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
 
-<!-- ✅ HEADER -->
 <header>
     <nav class="navbar navbar-expand-lg container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'dashboard-student' %}">
@@ -30,7 +29,6 @@
 </header>
 
 
-<!-- ✅ MAIN -->
 <main class="container py-5">
 
     <h2 class="fw-bold mb-4">Kreiraj novi oglas</h2>
