--- a/aplikacija/templates/dashboard-student.html
+++ b/aplikacija/templates/dashboard-student.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -8,13 +9,11 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header>
     <nav class="navbar navbar-expand-lg container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'dashboard-student' %}">
@@ -47,7 +46,6 @@
         </div>
     </div>
 
-    <!-- Wikipedia Search -->
     <div class="card p-4 shadow-sm">
         <h4 class="fw-semibold mb-3">Pretraga na Wikipediji</h4>
 
