--- a/aplikacija/templates/edit-cv.html
+++ b/aplikacija/templates/edit-cv.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic, Andjela Dimitrijevic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,13 +10,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header>
     <nav class="navbar navbar-expand-lg container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'dashboard-tutor' %}">
@@ -31,7 +30,6 @@
     </nav>
 </header>
 
-<!-- MAIN -->
 <main class="container py-5" style="max-width: 650px">
     <h2 class="fw-bold mb-4">Uredi CV</h2>
 
