--- a/aplikacija/templates/index.html
+++ b/aplikacija/templates/index.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic, Veljko Matic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,14 +10,12 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Tvoj CSS (ako nešto koristiš unutra) -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
 
 </head>
 <body>
 
-    <!-- NAVBAR (bez CTA-dupliranja) -->
     <header>
         <nav class="navbar navbar-expand-lg container">
             <a href="{% url 'homepage' %}" class="navbar-brand d-flex align-items-center gap-2">
@@ -31,7 +30,6 @@
         </nav>
     </header>
 
-    <!-- HERO -->
     <main class="hero container">
         <div class="mx-auto" style="max-width: 720px;">
             <h1 class="fw-bold mb-3">Uči pametnije, ne više.</h1>
