--- a/aplikacija/templates/login.html
+++ b/aplikacija/templates/login.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic, Filip Pantic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,13 +10,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
 
-<!-- NAVBAR -->
 <header>
     <nav class="navbar navbar-expand-lg container">
         <a href="{% url 'homepage' %}" class="navbar-brand d-flex align-items-center gap-2">
@@ -29,7 +28,6 @@
     </nav>
 </header>
 
-<!-- LOGIN BOX -->
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 75vh;">
     <div class="card p-4 shadow-sm" style="width: 380px;">
         <h3 class="fw-semibold mb-3 text-center">Prijavi se</h3>
