--- a/aplikacija/templates/register.html
+++ b/aplikacija/templates/register.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic, Filip Pantic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -8,7 +9,6 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
