--- a/aplikacija/templates/reset-password.html
+++ b/aplikacija/templates/reset-password.html
@@ -1,3 +1,4 @@
+<!-- Luka Zdravic, Filip Pantic -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,13 +10,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body class="pb-5">
 
-<!-- ✅ HEADER -->
 <header>
     <nav class="navbar navbar-expand-lg container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'login' %}">
@@ -26,7 +25,6 @@
 </header>
 
 
-<!-- ✅ MAIN RESET CARD -->
 <main class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
     <div class="card shadow-sm p-4" style="width: 450px; max-width:100%;">
 
